Fix alignment and title size
Not meant to do two things at once

--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -11,6 +11,8 @@ body {
 
 .title {
   background: #e3f4ff;
+  font-size: larger;
+  font-weight: bold;
 }
 
 .content {
@@ -19,6 +21,7 @@ body {
 
 .button-container {
   background: #e3f4ff;
+  text-align: center;
 }
 
 button {
